<resources>
    <string name="app_name">RaxCal 🔢</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="DIVIDE">/</string>
    <string name="MULTIPLY">x</string>
    <string name="SUBSTRACT">-</string>
    <string name="ADDITION">+</string>
    <string name="EQUALS">=</string>
    <string name="number">Number</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clear">clear</string>
    <string name="_0">0</string>
    <string name="percentage">%</string>
    <string name="dot">.</string>
    <string name="backspace"><![CDATA[<--]]></string>

</resources>
